<resources>
    <string name="app_name" translatable="false">Autox.js</string>
    <string name="text_broadcast_action_prefix" translatable="false">android.intent.action.</string>
    <string name="text_en_import" translatable="false">import</string>
    <string name="dex_crcs" translatable="false">2184044085\n3566596539\npJTCkHuhypD9i3UBQ55XQw==RtXsgCTVFA7VYhLeF1TSkg==</string>
    <string name="format_default_package_name" formatted="true" translatable="false">com.example.script%d</string>
    <string name="powered_by_autojs" translatable="false">Powered by Autoxjs.com</string>
    <string name="my_github" translatable="false">https://github.com/kkevsekk1/autox</string>
    <string name="copyright" translatable="false">Copyright©2020-2022 All right reserves.</string>
    <string name="developer" translatable="false">aaron</string>
    <string name="qq" translatable="false">895775483</string>
    <string name="text_qq" translatable="false">QQ群：895775483</string>
    <string name="email" translatable="false">chengshulun@live.com</string>
    <string name="key_night_mode" translatable="false">key_night_mode</string>
    <string name="key_foreground_servie" translatable="false">key_foreground_service</string>
    <string name="key_script_dir_path" translatable="false">key_script_dir_path</string>
    <string name="key_documentation_source" translatable="false">key_documentation_source</string>
    <string name="key_enable_observe_key" translatable="false">key_enable_observe_key</string>
    <string name="key_single_build_clean_mode" translatable="false">key_single_build_clean_mode</string>
    <string name="key_stable_mode" translatable="false">key_stable_mode</string>
    <string name="key_record_toast" translatable="false">key_record_toast</string>
    <string name="key_root_record_out_file_type" translatable="false">key_root_record_out_file_type</string>
    <string name="key_use_volume_control_running" translatable="false">key_use_volume_control_running</string>
    <string name="key_enable_accessibility_service_by_root" translatable="false">key_enable_accessibility_service_by_root</string>
    <string name="key_max_length_for_code_completion" translatable="false">key_max_length_for_code_completion</string>
    <string name="key_use_volume_control_record" translatable="false">key_use_volume_control_record</string>
    <string name="key_guard_mode" translatable="false">key_guard_mode</string>
    <string name="text_accessibility_service_description">当脚本需要自动化操作时候需要无障碍服务,比如 (click, long press, slide, etc.).</string>
    <string name="text_new_file">新建文件</string>
    <string name="text_create_fail">创建失败</string>
    <string name="text_please_input_name">请输入名称</string>
    <string name="text_name">名称</string>
    <string name="text_go_to_setting">去设置</string>
    <string name="explain_accessibility_permission">软件需要打开“无障碍服务”才能运行，请打开“设置->无障碍服务”或“设置->无障碍服务->更多已下载的服务”，找到本应用，开启无障碍服务\n您也可以稍后在侧拉菜单中设置。</string>
    <string name="explain_accessibility_permission2">软件需要打开“无障碍服务”才能运行，请打开“设置->无障碍服务”或“设置->无障碍服务->更多已下载的服务”，找到本应用，开启无障碍服务</string>
    <string name="text_cancel">取消</string>
    <string name="text_path_is_empty">路径为空</string>
    <string name="text_file_not_exists">文件不存在</string>
    <string name="text_no_file_rw_permission">无文件读写权限</string>
    <string name="text_no_accessibility_permission">无障碍服务未启动</string>
    <string name="text_drawer_close">关闭侧拉菜单</string>
    <string name="text_drawer_open">打开侧拉菜单</string>
    <string name="text_undo">撤销</string>
    <string name="text_redo">重做</string>
    <string name="text_save">保存</string>
    <string name="text_run">运行</string>
    <string name="text_alert">提示</string>
    <string name="edit_exit_without_save_warn">内容尚未保存，您确定要退出吗？</string>
    <string name="text_save_and_exit">保存并退出</string>
    <string name="text_exit_directly">直接退出</string>
    <string name="text_setting">设置</string>
    <string name="text_exit">退出</string>
    <string name="text_auto_operate_service">无障碍服务</string>
    <string name="text_about">关于</string>
    <string name="text_licenses">开放源代码许可</string>
    <string name="text_do_not_remind_again">不再提示</string>
    <string name="github">软件源代码</string>
    <string name="text_already_copy_to_clip">已复制到剪贴板</string>
    <string name="text_qq_already_copy_to_clip">QQ群号已复制到剪贴板</string>
    <string name="share_app">[Autox.js]下载地址：https://github.com/kkevsekk1/AutoX/releases </string>
    <string name="text_floating_window">悬浮窗</string>
    <string name="text_error_report">错误报告</string>
    <string name="text_press_again_to_exit">再按一次退出程序</string>
    <string name="text_already_stop_n_scripts">已停止%d个正在运行的脚本</string>
    <string name="text_start_running">开始运行</string>
    <string name="text_open_by_other_apps">用其他应用打开</string>
    <string name="text_rename">重命名</string>
    <string name="text_send_shortcut">创建快捷方式</string>
    <string name="text_already_create">已创建</string>
    <string name="text_delete">删除</string>
    <string name="text_already_delete">已删除</string>
    <string name="text_error">错误</string>
    <string name="text_copy_debug_info">复制调试信息</string>
    <string name="text_it_is_the_developer_of_app">这是软件开发者之一(。・・)ノ</string>
    <string name="text_please_choose">请选择</string>
    <string name="text_crash">崩溃了o(≧口≦)o</string>
    <string name="crash_feedback">将会自动提交错误信息。您也可以手动复制调试信息提交给开发者(*^▽^*)或者点击\"退出\"退出程序o(╥﹏╥)o</string>
    <string name="text_clear">清空</string>
    <string name="text_console">控制台</string>
    <string name="text_log">日志</string>
    <string name="text_report_fail">提交失败</string>
    <string name="text_report_succeed">提交成功</string>
    <string name="edit_and_run_handle_intent_error">无法处理文件</string>
    <string name="text_issue_report">问题反馈</string>
    <string name="text_script_record">录制脚本</string>
    <string name="text_start_record">开始录制</string>
    <string name="text_recorded">录制结束</string>
    <string name="text_copy_to_clip">复制到剪贴板</string>
    <string name="text_file_write_fail">文件写入失败</string>
    <string name="text_use_volume_control_record">使用音量下键控制</string>
    <string name="summary_use_volume_control_record">开启悬浮窗后每次音量下键会开始或停止脚本录制</string>
    <string name="key_auto_backup">key_auto_back</string>
    <string name="text_qq_group">这是qq群号,若无法打开请手动搜索</string>
    <string name="text_mobile_qq_not_installed">未安装手机QQ</string>
    <string name="text_edit">编辑</string>
    <string name="text_max_length_for_code_completion">代码补全最大文件长度</string>
    <string name="text_file_exists">文件已存在</string>
    <string name="text_accessibility_service">无障碍服务</string>
    <string name="text_enable_accessibility_service_by_root">通过Root权限自动启用服务</string>
    <string name="text_auto_operate_service_enabled_but_not_running">无障碍服务已启用但并未运行，这可能是安卓的BUG，您可能需要重启手机或重启无障碍服务</string>
    <string name="text_enable_accessibility_service_by_root_timeout">使用Root权限启动无障碍服务超时</string>
    <string name="summary_enable_accessibility_service_by_root">开启后运行脚本会使用Root权限自动开启无障碍服务</string>
    <string name="text_appearance">外观</string>
    <string name="text_theme_color">主题色</string>
    <string name="text_select_image">选择图片</string>
    <string name="text_help">帮助</string>
    <string name="text_no_floating_window_permission">没有悬浮窗权限</string>
    <string name="text_no_accessibility_permission_to_capture">无障碍服务未启动</string>
    <string name="text_record_msg">录制提示</string>
    <string name="text_text_changed">文字改变</string>
    <string name="text_scrolled">滑动</string>
    <string name="text_long_clicked">长按</string>
    <string name="text_clicked">点击</string>
    <string name="text_copy_to_my_scripts">导入到我的脚本</string>
    <string name="text_import_succeed">导入成功</string>
    <string name="text_current_activity">当前活动:</string>
    <string name="text_current_package">当前应用包名:</string>
    <string name="go_to_accessibility_settings"><![CDATA[请打开设置->无障碍服务->Autox.js并开启]]></string>
    <string name="text_script_running">脚本运行</string>
    <string name="text_use_volume_to_stop_running">音量上键停止所有脚本</string>
    <string name="text_need_to_enable_accessibility_service">需要启用无障碍服务</string>
    <string name="text_import_fail">导入失败</string>
    <string name="text_no_brower">没有浏览器耶o(╯□╰)o快去安装一个吧</string>
    <string name="text_refresh">刷新</string>
    <string name="notice_no_running_script"><![CDATA[没有正在运行的脚本 φ(>ω<*)]]></string>
    <string name="text_please_choose_a_script">请选择脚本</string>
    <string name="text_edit_prepare_script">编辑预执行脚本</string>
    <string name="text_pre_execute_script">预执行脚本</string>
    <string name="text_clear_pre_execute_script">清空预执行脚本</string>
    <string name="text_clear_file_selection">重置脚本文件选择</string>
    <string name="summary_pre_execute_script">将在脚本文件执行前执行</string>
    <string name="text_checking_update">正在检查更新</string>
    <string name="text_new_version">新版本</string>
    <string name="text_new_version2">新版本：%s</string>
    <string name="text_check_update_error">检查更新失败：%s</string>
    <string name="text_check_for_updates">检查更新</string>
    <string name="text_is_latest_version">已经是最新版本</string>
    <string name="text_version_too_old">版本过低</string>
    <string name="warning_version_too_old">当前版本为公测版，显现和潜在的问题很多，不再适合继续使用，</string>
    <string name="text_update">更新</string>
    <string name="text_release_notes">更新日志</string>
    <string name="text_download_url">下载地址</string>
    <string name="text_code_beautify">格式化代码</string>
    <string name="text_guard_mode">保护模式</string>
    <string name="summary_guard_mode">在本软件界面无法运行自动操作命令以免误触</string>
    <string name="text_force_stop">强制停止</string>
    <string name="text_about_me_and_repo">关于项目与开发者</string>
    <string name="text_root_record_out_file_type">Root录制生成文件类型</string>
    <string name="text_binary">binary</string>
    <string name="summary_stable_mode">开启后布局分析更稳定，但小部分脚本可能无法正常运行。重启无障碍服务生效</string>
    <string name="text_stable_mode">稳定模式</string>
    <string name="text_single_build_clean_mode">单文件打包清爽模式</string>
    <string name="summary_single_build_clean_mode">开启后单文件打包时不保存打包配置文件,及不保存启动图和应用图标等所有配置信息</string>
    <string name="text_others">其他</string>
    <string name="text_editor_theme">编辑器主题</string>
    <string name="text_jump_to_line">跳转到行</string>
    <string name="text_info">信息</string>
    <string name="text_find_or_replace">查找/替换</string>
    <string name="text_copy_all">复制全部</string>
    <string name="text_copy_line">复制行</string>
    <string name="text_delete_line">删除行</string>
    <string name="text_jump">跳转</string>
    <string name="text_jump_to_end">转到文件末尾</string>
    <string name="text_jump_to_start">转到文件开始</string>
    <string name="text_jump_to_line_start">转到行首</string>
    <string name="text_jump_to_line_end">转到行尾</string>
    <string name="text_build_apk">打包应用</string>
    <string name="text_sign_hint_key_path">*文件保存路径</string>
    <string name="text_sign_hint_key_alias">*别名</string>
    <string name="text_sign_hint_key_password">*密码</string>
    <string name="text_sign_hint_key_year">*有效期(年)</string>
    <string name="text_sign_key_year_def">25</string>
    <string name="text_sign_hint_key_country">*国家代码(XX)</string>
    <string name="text_sign_key_country_def">CN</string>
    <string name="text_sign_hint_not_must">以下为可选参数</string>
    <string name="text_sign_hint_key_name">名称</string>
    <string name="text_sign_hint_key_org">组织</string>
    <string name="text_sign_hint_key_org_unit">组织单位</string>
    <string name="text_sign_hint_key_province">省份</string>
    <string name="text_sign_hint_key_city">城市</string>
    <string name="text_search">搜索</string>
    <string name="text_text_size">字体大小</string>
    <string name="text_change_script_dir">更改脚本文件夹路径</string>
    <string name="default_value_script_dir_path">/脚本/</string>
    <string name="text_debug">调试</string>
    <string name="text_search_java_class">搜索Java包/类</string>
    <string name="text_file_manager_permission">所有文件访问权限</string>
    <string name="text_fullscreen">切换全屏模式1</string>
    <string name="text_drawer_right">打开右侧菜单</string>
</resources>