<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_sign_key_pat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_path">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_alias">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_password">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_year">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_key_year_def" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_country">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_sign_key_country_def" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/text_sign_hint_not_must"
        android:textColor="@android:color/darker_gray" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_name">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_org">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_org"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_org_unit">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_province">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_province"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_sign_hint_key_city">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/ed_sign_key_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>